<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".AddProdActivity" >

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/cadName"
            android:inputType="textCapWords" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextQtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/cadQtd"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextPrecoUnico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/cadPreco"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/imgProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/description"
            android:src="@drawable/no_image_" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/BtnAdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/save" />

            <Button
                android:id="@+id/BtnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>