<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtQtd"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/qtd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPreco"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/preco"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/preco"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>